tests/fsharp/typecheck/sigs/neg_byref_17.bsl

neg_byref_17.fs(2,17,2,27): typecheck error FS0001: This expression was expected to have type
    'byref<int>'    
but here has type
    'int'    

neg_byref_17.fs(3,17,3,24): typecheck error FS0001: This expression was expected to have type
    'byref<int>'    
but here has type
    'int'    
